--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,20 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
