--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
   "author": "Nantawat Laothong",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1079.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -22,6 +24,7 @@
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "node-fetch": "^3.2.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
