--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^3.2.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "serve-favicon": "^2.5.0"
   }
 }
