--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1079.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
