--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid-apikey": "^1.5.3"
   }
 }
